# rafty-crab

./: Cargo.toml  sketch.pp
.github/workflows/: flow.yml
assets/: config.toml  crab.pp  cross.pp  damage.pp  dash.pp  dash_arrow.pp  destroy.pp  falling_poop.pp  poop.pp  push.pp  raft_tile.pp  seagull.pp  server_config.toml  shark.pp  splash.pp
assets/crab/: body.pp  legs.pp
assets/custom/: list.ron
assets/custom/icylava/: body.pp  full.pp  legs.pp
assets/custom/markais/: body.pp  full.pp  legs.pp
assets/custom/meep/: body.pp  full.pp  legs.pp
assets/custom/pomo/: body.pp  full.pp  legs.pp
assets/custom/ricky/: body.pp  full.pp  legs.pp
assets/custom/tron/: body.pp  full.pp  legs.pp
assets/shaders/: model.glsl  text.glsl  water.glsl
src/: assets.rs  camera.rs  interpolation.rs  main.rs  model_draw.rs  server.rs
