[package]
name = "rafty-crab"
version = "0.1.0"
edition = "2021"

[dependencies]
geng = { git = "https://github.com/geng-engine/geng" }
noise = "0.8.2"
pog-paint = { git = "https://github.com/kuviman/PogPaint" }
serde = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.1"
rustrict = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
